<resources>
    <string name="app_name">Final Project</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="icon_person">icon person</string>
    <string name="icon_school">icon school</string>
    <string name="school">School</string>
    <string name="friends_school">Friends School</string>
    <string name="icon_bio">icon bio</string>
    <string name="name">Name</string>
    <string name="detail">Detail</string>
    <string name="bio">Bio</string>
    <string name="button_add">button add</string>
    <string name="button_back">button back</string>
    <string name="button_delete">button delete</string>
    <string name="button_edit">button edit</string>
    <string name="friends_bio">Friends Bio</string>
    <string name="friends_name">Friends Name</string>
    <string name="photo_friend">photo friend</string>
    <string name="add_friend">Add Friend</string>
    <string name="friend_name">Friend name</string>
    <string name="friend_school">Friend School</string>
    <string name="friend_bio">Friend Bio</string>
    <string name="op">Let\'s be friend</string>
    <string name="des">Kelas Industri not only develop hard skills and soft skills, but we also helpd develop life skills according to your competence.</string>
    <string name="start">Let\'s Start</string>
    <string name="friendname">Friend Name</string>
    <string name="schooll">School</string>
    <string name="button_save">button_save</string>
    <string name="edit_friend">Edit Friend</string>
    <string name="detail_friend">Detail Friend</string>
    <string name="search">Search</string>
    <string name="not_found_ic">Not_Found_ic</string>
    <string name="friend_not_found">Friend Not Found</string>
    <string name="image_profile">image profile</string>
    <string name="page_welcome">page welcome</string>
    <string name="button_camera">button camera</string>
    <string name="input_friend_bio">Input Friend Bio</string>
    <string name="input_friend_school">Input Friend School</string>
    <string name="input_friend_name">Input Friend Name</string>
</resources>